--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,11 @@ set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/install/lib )
 set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/install/lib )
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/install/bin )
 
-#
+# add source files
+include_directories(
+        include
+)
+
 aux_source_directory( ./src DIR_SRCS )
 add_executable( ${PROJECT_NAME} ${DIR_SRCS} main.cpp )
 
@@ -62,7 +66,3 @@ if ( WIN32 )
                             "$<TARGET_FILE_DIR:${PROJECT_NAME}>" )
     endforeach ( QT_LIB )
 endif ()
-
-include_directories(
-        include
-)
